lists: Experiment: overflow=hidden to avoid overlaying floats

--- a/lists.css
+++ b/lists.css
@@ -1,3 +1,12 @@
+/* Hide overflow from lists so that it doesn't overlay floats */
+ol, ul {
+    overflow: hidden;
+}
+
+/*
+ * Optionally stripe ul lists
+ */
+
 .ul-striped ul li:nth-child(odd) {
     background-color: var(--background-primary);
 }
